# Multi-Agent-Semantic-Cyber-Threat-Reconstruction

./: .env.example  .gitignore  Makefile  Multi-Agent Semantic_Abstract Report.docx  Multi-Agent Semantic_Detailed Methedology.docx  OpenClaw_AI_Disclosure.docx  README.md  RVCE_CognitiveOps.pptx  aegis_verification_report.html  pyproject.toml  start_aegis.bat  stop_aegis.bat
.github/workflows/: ci.yml
data/cognitive_ram/: activity_ip_10.0.0.100_493950.json  activity_ip_10.0.0.50_493950.json  context_triage_16475da4-8fbd-4008-a449-d38b7b765914.json  context_triage_18a53f71-1f38-4d32-aa4f-10445b8ec377.json  context_triage_24d35eed-16ce-45d2-ba9b-69307a36c7d7.json  context_triage_3cdac503-6999-40b2-99f4-6befd1ce42d3.json  (+3 more)
docs/: architecture.md  methodology_reference.txt  project_documentation.md
infra/: docker-compose.yml
ingestion/: api.py  daemon.py  db.py  dlq_retry.py  intent_translator.py  log_identifier.py  models.py  normalizer.py  priority_queue.py  requirements.txt  sanitizer.py
openclaw/: HEARTBEAT.md  MEMORY.md  index.js  package-lock.json  package.json
schemas/: correlation_output.json  normalized_log.json  timeline_output.json  triage_output.json
scratch/: diagnose.py  e2e_test.py  inject.py
scripts/: api_baseline_injector.py  baseline_generator.py  demo_injector.py  demo_orchestrator.py  diagnose.py  kill_aegis.py  launch_aegis.py  purge_memory.bat  restore_baseline.bat  run_all.bat  scenario_injector.py  stop_aegis.bat  stop_aegis.ps1  test_daemon.py  test_embedding.py  test_ingestion.py
tests/: aegis_system_readiness_prompt.md
(+57 files in other folders)
